# motion-detect-realsense

./: CMakeLists.txt  Frame.hpp  MongoStream.cpp  MongoStream.hpp  README.md  motion_detect.cpp  utils.cpp  utils.hpp
docs/: description.rtf
scripts/: run-nano.sh
